--- a/main.html
+++ b/main.html
@@ -7,6 +7,18 @@
 </head>
 
 <body>
+	<b><p>ordered list</p></b>
+	<ol>
+		<li name="data-ns-test" value="shoppingList">Television</li>
+		<li name="data-ns-test" value="shoppingList">Bike</li>
+		<li name="data-ns-test" value="shoppingList">Ac</li>
+	</ol>
+	<b><p>unordered list</p></b>
+	<ul>
+		<li name="data-ns-test" value="holidayList">Kulu manali</li>
+		<li name="data-ns-test" value="holidayList">Ladakh</li>
+		<li name="data-ns-test" value="holidayList">Kerala</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
