--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+	<p>Lists are used very extensively to organize information. They can be <b>ordered</b> and <b>un-ordereded</b>. Let's make some of our own using HTML lists.</p>
+	<p>Imagine you got a job from AccioJob. Make 2 lists identifying the use of the money you'll make from the job.</p>
 	<b><p>ordered list</p></b>
 	<ol>
 		<li name="data-ns-test" value="shoppingList">Television</li>
