--- a/main.html
+++ b/main.html
@@ -7,21 +7,17 @@
 </head>
 
 <body>
-	<p>Lists are used very extensively to organize information. They can be <b>ordered</b> and <b>un-ordereded</b>. Let's make some of our own using HTML lists.</p>
-	<p>Imagine you got a job from AccioJob. Make 2 lists identifying the use of the money you'll make from the job.</p>
-	<b><p>ordered list</p></b>
+	
 	<ol>
-		<li name="data-ns-test" value="shoppingList">Television</li>
-		<li name="data-ns-test" value="shoppingList">Bike</li>
-		<li name="data-ns-test" value="shoppingList">Ac</li>
+		<li data-ns-test='shoppingList'>Scooty</li>
+		<li data-ns-test='shoppingList'>Branded Beg</li>
+		<li data-ns-test='shoppingList'>Ring</li>
 	</ol>
-	<b><p>unordered list</p></b>
 	<ul>
-		<li name="data-ns-test" value="holidayList">Kulu manali</li>
-		<li name="data-ns-test" value="holidayList">Ladakh</li>
-		<li name="data-ns-test" value="holidayList">Kerala</li>
+		<li data-ns-test='holidayList'>Chikkmangluru</li>
+		<li data-ns-test='holidayList'>utti</li>
+		<li data-ns-test='holidayList'>Jaisalmer fort</li>
 	</ul>
-	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
